- added custom CSS handling to Remote Starbar logic, so that the URL get's returned to the browser app and loaded *syncronously* which ensures two things (a) the CSS is determined dynamically based on selected Starbar and (b) no jumping DOM since the CSS is loaded *before* the markup is injected - added ._sayso_starbar_css_loaded to starbar-hellomusic.css which provides a cool way of detecting if CSS is loaded (this is handled in the browser app)

--- a/public/css/starbar-hellomusic.css
+++ b/public/css/starbar-hellomusic.css
@@ -512,3 +512,9 @@
 #sayso-starbar #sb_popBox_promo .sb_triangle-solid:after{
 	left: 223px;
 }
+
+/* Keep this at end of file. It's used for testing if CSS is loaded. */
+
+._sayso_starbar_css_loaded {
+	display: none;
+}
